manifests/example_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  annotations:
    locked: true
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
