manifests/lockvalidation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lockvalidation-svc
  labels:
    app: lockvalidation 
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: lockvalidation
