manifests/lockvalidation-cfg.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: lockvalidation-cfg 
  labels:
    app: lockvalidation 
webhooks:
  - name: lockvalidation.kotas.tech 
    clientConfig:
      service:
        name: lockvalidation-svc
        namespace: default
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyRENDQXNDZ0F3SUJBZ0lVUzhobWFRWUIrOHc5cHh4TTVwbUJuTy96Um1nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF4TUtiV2x1YVd0MVltVkRRVEFlRncweE9UQTVNVEV4TURFM01EQmFGdzB5TURBNQpNVEF4TURFM01EQmFNQ2t4SnpBbEJnTlZCQU1USG14dlkydDJZV3hwWkdGMGFXOXVMWE4yWXk1a1pXWmhkV3gwCkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLd0xscm44Y3VmbDZWN2EKN2M5emVVdTVva2RkVGhITm9WTGc1aWNDWUUzS1FXMXZINnF6dzJvcU5qM0F5eURCODJKc0t5a3kvVjRZRzRiLworaGx1WDdZWGNE [...]
    rules:
      - operations: 
          - CREATE
          - UPDATE
          - DELETE
          - CONNECT
        apiGroups:
          - "*"
        apiVersions: 
          - "*"
        resources: 
          - "*"
    namespaceSelector:
      matchLabels:
        lockable: "true"
